--- a/week4_plotting_assignment.ipynb
+++ b/week4_plotting_assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "id": "808c62d7",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "id": "7ea7f00c",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "id": "0cd08c9d",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "id": "15e248e3",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "id": "aafb30a7",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "id": "42f3cecc",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "id": "72596210",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "id": "3e72d236",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "id": "b83379b1",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1538,7 @@
        "99     85,000                        Richfield, Minnesota  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "id": "cc2873c9",
    "metadata": {},
    "outputs": [],
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "id": "ce5e720f",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1759,7 @@
        "9  Conshohocken, Pennsylvania  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "id": "def7aba1",
    "metadata": {},
    "outputs": [
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "id": "a57440a7",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "id": "9d556bf2",
    "metadata": {},
    "outputs": [
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 17,
    "id": "09ca9c1f",
    "metadata": {},
    "outputs": [
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "id": "5cf1c069",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "id": "ed83b708",
    "metadata": {},
    "outputs": [
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 20,
    "id": "fbe76774",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "id": "1266a6a6",
    "metadata": {},
    "outputs": [
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "id": "1add88e7",
    "metadata": {},
    "outputs": [
@@ -2972,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "id": "5c300469",
    "metadata": {},
    "outputs": [
@@ -5097,7 +5097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "id": "771b8d63",
    "metadata": {},
    "outputs": [
@@ -5135,8 +5135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "1f5e5671",
+   "execution_count": 25,
+   "id": "62c8e316",
    "metadata": {},
    "outputs": [
     {
@@ -6021,6 +6021,7 @@
     }
    ],
    "source": [
+    "# Create treemap\n",
     "fig = px.treemap(\n",
     "    top10,\n",
     "    path=['Industry', 'Name'],\n",
@@ -6028,6 +6029,27 @@
     "    title='Treemap: Revenue by Company and Industry'\n",
     ")\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b239ef94",
+   "metadata": {},
+   "source": [
+    "GitHub doesn’t support rendering interactive Plotly charts directly from .py files \n",
+    " or notebooks unless you handle the output properly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "25b4bbff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  If you want to keep it interactive and share it via GitHub: You can export the chart to an HTML file:\n",
+    "\n",
+    "fig.write_html(\"treemap.html\")"
    ]
   }
  ],
